Fix font-style in 'Hisoka Facts' area and add a gap between the photos and description.

--- a/styles.css
+++ b/styles.css
@@ -132,8 +132,11 @@ div {
 
 .pics {
   display: flex;
+  flex-direction: column;
   max-width: 300px;
   flex-wrap: wrap;
+  font-style: italic;
+  gap: 16px;
 }
 
 /* quote */
